src/components/screens/signMultiSignTransaction/styles.css
.progressBarContainer {
  margin: 5px 0 15px 0;
}

.boxContainer {
  & > header {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 20px 20px 0 20px;
    height: auto;

    & > p {
      margin-bottom: 0;
    }
  }

  & > .footer {
    padding-top: 20px;
  }

  & .feedback {
    width: 100%;
    padding: 0 var(--horizontal-padding-m);
    box-sizing: border-box;
    margin-bottom: 10px;

    & > span {
      width: 100%;
      background: var(--error-background-color);
      color: var(--color-strong-white);
      border-radius: var(--border-radius-standard);
      display: block;
      padding: var(--vertical-padding-s) var(--horizontal-padding-m);
      box-sizing: border-box;
    }
  }
}

